Implement weather API call

--- a/WeatherApp/Podfile
+++ b/WeatherApp/Podfile
@@ -7,7 +7,10 @@ target 'WeatherApp' do
   pod 'RSFontSizes', '~> 1.0.2'
   pod 'R.swift', '~> 5.0.3'
   pod 'SwiftLint', '~> 0.43.1'
-  
+  pod 'RxSwift', '6.2.0'
+  pod 'RxCocoa', '6.2.0'
+  pod 'SDWebImage', '~> 5.0'
+
   target 'WeatherAppUITests' do
     inherit! :complete
     pod 'Swifter', '~> 1.4.7'
